Simplified the shown message, only adding the items for which there is some selected.

--- a/scrumInfoPanel.html
+++ b/scrumInfoPanel.html
@@ -6,6 +6,6 @@
     <!-- script src="build/VSS.SDK.min.js"></script -->
 </head>
 <body>
-    <p id="sipanel">Hola món!</p>
+    <p id="show">Hola món!</p>
 </body>
 </html>
